# itmo-schedule

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/backend/: celery.py  settings.py  urls.py
backend/backend/core/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/backend/core/migrations/: 0001_initial.py
backend/backend/core/schedule/: __init__.py  auth.py  schedule.py  utils.py
client/: app.vue  bun.lockb  formkit.config.ts  nuxt.config.ts  package.json
client/api/: schedule.ts
client/assets/styles/: main.scss
client/components/: DayEventsCard.vue  Loading.vue  ScheduleList.vue
client/utils/: colors.ts
